Caused by: org.postgresql.util.PSQLException: FATAL: password authentication failed for user "admin"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-password=pass123
-db-name=repo.txt
-username=nradov1
+spring.datasource.url=jdbc:postgresql://localhost:5432/CarCheckUps-db
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+logging.level.com.zaxxer.hikari=INFO
+logging.level.com.zaxxer.hikari.HikariConfig=INFO
