--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/CarCheckUps-db
+spring.datasource.username=admin
+spring.datasource.password=admin
 
+//logging.level.com.zaxxer.hikari=INFO
+//logging.level.com.zaxxer.hikari.HikariConfig=INFO
