--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/CarCheckUps-db
 spring.datasource.username=admin
 spring.datasource.password=admin
 
-logging.level.com.zaxxer.hikari=INFO
-logging.level.com.zaxxer.hikari.HikariConfig=INFO
+//logging.level.com.zaxxer.hikari=INFO
+//logging.level.com.zaxxer.hikari.HikariConfig=INFO
