--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/CarCheckUps-db
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:tc:postgresql:13-alpine://localhost:5432/test-db
 
-//logging.level.com.zaxxer.hikari=INFO
-//logging.level.com.zaxxer.hikari.HikariConfig=INFO
+logging.level.org.springframework.jdbc.core = TRACE
