--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5431/CarCheckUps-db
+spring.datasource.url=jdbc:postgresql://localhost:5433/CarCheckUps-db
 spring.datasource.username=admin
 spring.datasource.password=admin
 
-//logging.level.com.zaxxer.hikari=INFO
-//logging.level.com.zaxxer.hikari.HikariConfig=INFO
+spring.jpa.open-in-view=false
