--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:tc:postgresql:12.11-alpine://localhost:5431/test-db
-
+model-data.base-url=http://localhost:${mockServerPort}
 logging.level.org.springframework.jdbc.core = TRACE
+
+
+https://62d922dd5d893b27b2df0731.mockapi.io/api/v1/cars/1
