--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 
 spring.jpa.open-in-view=false
+
+model-data.base-url=https://62d922dd5d893b27b2df0731.mockapi.io/api/v1/cars/1
