--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=admin
 spring.jpa.open-in-view=false
 
 model-data.base-url=https://62d922dd5d893b27b2df0731.mockapi.io/api/v1/cars/1
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri:https://infinum.com
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri:http://localhost:8888/jwks.json
